# AzaharTrigger

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.ci/: libretro-pack.sh  linux.sh  macos-universal.sh  macos.sh  pack.sh  source.sh  windows.sh
.github/workflows/: build.yml  libretro.yml
CMakeModules/: FindZLIB.cmake  GenerateBuildInfo.cmake  GenerateSCMRev.cmake  GenerateSettingKeys.cmake  Toolchain_mingw64.cmake
docker/azahar-room/: Dockerfile
src/: CMakeLists.txt
src/android/app/: build.gradle.kts
src/audio_core/: dsp_interface.h
src/audio_core/hle/: hle.cpp  hle.h
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  core_settings.cpp  core_settings.h  environment.cpp  environment.h  libretro_vk.cpp
src/citra_meta/: CMakeLists.txt  main.cpp
src/citra_qt/: CMakeLists.txt  aboutdialog.ui  bootmanager.cpp  citra_qt.cpp  citra_qt.h  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  main.ui  notification_led.cpp  uisettings.h
src/citra_sdl/: citra_sdl.cpp  citra_sdl.h  config.cpp  default_ini.h
src/common/: CMakeLists.txt  android_storage.cpp  android_storage.h  common_paths.h  error.cpp  file_util.cpp  file_util.h  hash.h  math_util.cpp  settings.cpp  settings.h  string_util.cpp  string_util.h  zstd_compression.cpp  zstd_compression.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp  memory.h  system_titles.h  zip_pass.cpp  zip_pass.h
src/network/: CMakeLists.txt  lan_melon.cpp  lan_melon.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  gpu.cpp
(+196 files in other folders)
